--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -67,57 +67,58 @@
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Owin.Security.Providers" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.ArcGISOnline" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Asana" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Backlog" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Baidu" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.BattleNet" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Bitbucket" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Box" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Buffer" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Cosign" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.DeviantArt" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Discord" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.DoYouBuzz" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Dropbox" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.EVEOnline" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Fitbit" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Flickr" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Foursquare" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Geni" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.GitHub" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Gitter" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.GooglePlus" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.HealthGraph" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Imgur" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Instagram" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.LinkedIn" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.MyHeritage" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Onshape" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.OpenID" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.ArcGISOnline" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Asana" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Backlog" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Baidu" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.BattleNet" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Bitbucket" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Box" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Buffer" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Cosign" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DeviantArt" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Discord" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DoYouBuzz" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Dropbox" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.EVEOnline" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Fitbit" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Flickr" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Foursquare" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Geni" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GitHub" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Gitter" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GooglePlus" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.HealthGraph" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Imgur" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Instagram" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.LinkedIn" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.MyHeritage" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Onshape" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.OpenID" version="2.12.0" targetFramework="net46" />
   <package id="Owin.Security.Providers.OpenIDBase" version="2.1" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Orcid" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.PayPal" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Reddit" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Salesforce" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Shopify" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.SlackProvider" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.SoundCloud" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Spotify" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.StackExchange" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Steam" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.TripIt" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Twitch" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Untappd" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Vimeo" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.VisualStudio" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.VKontakte" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Wargaming" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.WordPress" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Xing" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Yahoo" version="2.11.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Yammer" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Orcid" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.PayPal" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Reddit" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Salesforce" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Shopify" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SlackProvider" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SoundCloud" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Spotify" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.StackExchange" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Steam" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.TripIt" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Twitch" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Untappd" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Vimeo" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VisualStudio" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VKontakte" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Wargaming" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.WordPress" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.WSO2" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Xing" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yahoo" version="2.12.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yammer" version="2.12.0" targetFramework="net46" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
