--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -982,7 +982,6 @@
     <Content Include="Content\bootstrap\bootstrap.less" />
     <Content Include="Content\bootstrap\badges.less" />
     <Content Include="Content\bootstrap\alerts.less" />
-    <None Include="Properties\PublishProfiles\m4d.pubxml" />
     <Content Include="MvcDiagnostics.aspx" />
     <Content Include="pinterest-885c1.html" />
     <Content Include="Scripts\advancedsearch.js" />
@@ -993,10 +992,10 @@
     <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Scripts\counter.js" />
     <Content Include="Scripts\edit.js" />
+    <None Include="Properties\PublishProfiles\m4d - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\music4dance.pubxml" />
     <Content Include="Scripts\editdance.js" />
     <!--<Content Include="Scripts\glimpse-knockout.js" />-->
-    <Content Include="Properties\webjobs-list.json" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
