--- a/m4d/package.json
+++ b/m4d/package.json
@@ -3,8 +3,11 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap": "^4.4.1",
     "bootstrap-less": "3.3.8",
     "bootstrap3": "^3.3.5",
+    "gulp-sass": "^4.0.2",
     "jquery": "^3.4.1",
     "jquery-validation": "^1.19.1",
     "knockout": "^3.5.1",
@@ -14,7 +17,7 @@
   },
   "devDependencies": {
     "gulp": "4.0.2",
-    "gulp-less": "4.0.1",
-    "gulp-clean-css": "4.2.0"
+    "gulp-clean-css": "4.2.0",
+    "gulp-less": "4.0.1"
   }
 }
